# AgenticProcurement

./: .gitignore  Makefile  README.md  README.tex  app.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
Documentation/: erina_changelog.md  final_report.tex  final_report_rubric_and_execution_prompt.md  references.bib
config/: __init__.py  settings.py
core/: __init__.py  episode.py  interfaces.py
data/: products.csv
decision/: __init__.py  delegation_engine.py
environment/: __init__.py  catalog_sources.py  simulator.py
evaluation/: metrics.py  offline.py
experiments/: __init__.py  run_experiment.py  run_full_experiments.py  run_offline_evaluation.py  visualize_results.py
models/: __init__.py  bayesian_user.py
project_setup/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
results/: agent_results.json  baseline_results.json  full_experiment_results.json
scripts/: run.sh
tests/: test_bayesian_user.py  test_catalog_sources.py  test_config.py  test_delegation_engine.py  test_episode_core.py  test_integration.py  test_metrics.py  test_offline_evaluation.py  test_phase1.py  test_reproducibility.py  test_results_2026-04-20.txt  test_simulator.py  test_web_demo.py
web_demo/: __init__.py  product_emojis.py  server.py  wsgi.py
web_demo/static/: app.js  index.html  style.css
