[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-procurement"
version = "0.1.0"
description = "Bayesian delegated procurement agent with minimax-regret safety gates."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Agentic Procurement Contributors" }
]
dependencies = [
  "numpy>=2.0.0,<3.0.0",
  "pandas>=2.2.0,<3.0.0",
  "scipy>=1.13.0,<2.0.0",
  "matplotlib>=3.8.0,<4.0.0",
  "flask>=3.0.0,<4.0.0",
  "gunicorn>=22.0.0,<24.0.0",
  "streamlit>=1.30.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<10.0.0",
  "ruff>=0.8.0,<1.0.0",
]

[tool.setuptools]
packages = ["config", "core", "decision", "environment", "evaluation", "experiments", "models", "web_demo"]

[tool.setuptools.package-data]
web_demo = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"web_demo/server.py" = ["E402"]
